--- a/Emparejados/src/application/partida.fxml
+++ b/Emparejados/src/application/partida.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="894.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ToolBar maxHeight="-Infinity" prefHeight="48.0" prefWidth="894.0">
@@ -103,82 +102,82 @@
          <children>
             <ImageView fx:id="carta_0_0" fitHeight="121.0" fitWidth="139.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_1_0" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_2_0" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_0_1" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_3_0" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_1_1" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_2_1" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_3_1" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_0_2" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_1_2" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_2_2" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_3_2" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_0_2" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_1_3" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_2_3" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
             <ImageView fx:id="carta_3_3" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestracarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <image>
-                  <Image url="@../../../../../Desktop/CARLOS/UNIVERSIDAD/3rCURSO/PSW/el%20aldeano%20común.png" />
+                  <Image url="@../imagenes/dorso_aldeano.png" />
                </image>
             </ImageView>
          </children>
