--- a/Emparejados/src/Vista/MenuPause.fxml
+++ b/Emparejados/src/Vista/MenuPause.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="565.0" prefWidth="894.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="565.0" prefWidth="894.0" xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPause">
    <children>
       <ImageView fx:id="imagePlay" fitHeight="127.0" fitWidth="127.0" layoutX="171.0" layoutY="142.0" onMouseClicked="#clickPlay" pickOnBounds="true" preserveRatio="true">
          <image>
