--- a/Emparejados/src/Vista/partida.fxml
+++ b/Emparejados/src/Vista/partida.fxml
@@ -11,10 +11,11 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="894.0" xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="637.0" prefWidth="894.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
    <children>
       <ToolBar maxHeight="-Infinity" prefHeight="48.0" prefWidth="894.0">
         <items>
@@ -37,7 +38,7 @@
                         <Image url="@../imagenes/temporizador.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="tiempo" lineSpacing="20.0" prefHeight="24.0" prefWidth="43.0" text="1:00">
+                  <Label fx:id="tiempo" lineSpacing="20.0" prefHeight="31.0" prefWidth="204.0" text="1:00">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -83,104 +84,113 @@
             <Insets bottom="5.0" top="20.0" />
          </VBox.margin>
       </ToolBar>
-      <GridPane prefHeight="572.0" prefWidth="894.0">
-        <columnConstraints>
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <cursor>
-            <Cursor fx:constant="OPEN_HAND" />
-         </cursor>
+      <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="565.0" prefWidth="894.0">
          <children>
-            <ImageView fx:id="carta00" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta10" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta20" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta01" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta30" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta11" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta21" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta31" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta02" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta12" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta22" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta32" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta03" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta13" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta23" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="carta33" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../imagenes/dorso_aldeano.png" />
-               </image>
-            </ImageView>
+            <GridPane prefHeight="572.0" prefWidth="894.0">
+              <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor>
+               <children>
+                  <ImageView fx:id="carta00" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta10" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta20" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta01" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta30" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta11" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta21" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta31" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta02" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta12" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta22" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta32" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta03" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta13" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta23" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="carta33" fitHeight="121.0" fitWidth="139.0" onMouseClicked="#muestraCarta" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                     <image>
+                        <Image url="@../imagenes/dorso_aldeano.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
+            <Label fx:id="resultado" alignment="CENTER" contentDisplay="CENTER" prefHeight="179.0" prefWidth="500.0" text="VICTORIA" textAlignment="CENTER" textFill="#2e20e5">
+               <font>
+                  <Font size="96.0" />
+               </font>
+            </Label>
          </children>
-      </GridPane>
+      </StackPane>
    </children>
 </VBox>
