--- a/Emparejados/src/Vista/MenuPrincipal.fxml
+++ b/Emparejados/src/Vista/MenuPrincipal.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="383.0" prefWidth="626.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.241" fx:controller="application.ControladorMenuPrincipal">
+<AnchorPane prefHeight="489.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPrincipal">
    <children>
-      <Button fx:id="partidaEstandar" layoutX="218.0" layoutY="205.0" mnemonicParsing="false" onAction="#partidaEstandarHandler" prefHeight="70.0" prefWidth="193.0" text="Partida Estándar" />
-      <Text layoutX="160.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menú Principal" wrappingWidth="309.025390625">
-         <font>
-            <Font size="46.0" />
-         </font>
-      </Text>
+      <ImageView fitHeight="489.0" fitWidth="771.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/menu_principal.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="partidaEstandar" layoutX="257.0" layoutY="210.0" mnemonicParsing="false" onAction="#partidaEstandarHandler" prefHeight="70.0" prefWidth="193.0" text="Partida Estándar" />
    </children>
 </AnchorPane>
