--- a/Emparejados/src/Vista/MenuPrincipal.fxml
+++ b/Emparejados/src/Vista/MenuPrincipal.fxml
@@ -13,5 +13,10 @@
          </image>
       </ImageView>
       <Button fx:id="partidaEstandar" layoutX="257.0" layoutY="210.0" mnemonicParsing="false" onAction="#partidaEstandarHandler" prefHeight="70.0" prefWidth="193.0" text="Partida Estándar" />
+      <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" layoutX="573.0" layoutY="66.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/sonido_on.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
