--- a/Emparejados/src/Vista/partida.fxml
+++ b/Emparejados/src/Vista/partida.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="894.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="894.0" style="-fx-background-color: ffffff;" styleClass="bodybg" stylesheets="@../application/estilo1.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
    <children>
       <ToolBar maxHeight="-Infinity" prefHeight="48.0" prefWidth="894.0">
         <items>
@@ -65,14 +64,11 @@
                         <Image url="@../imagenes/sonido_on.png" />
                      </image>
                   </ImageView>
-                <Button fx:id="pausa" mnemonicParsing="false" onAction="#pausarPartida" prefHeight="26.0" prefWidth="66.0" text="Pause">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </Button>
+                  <ImageView fx:id="pausa" fitHeight="41.0" fitWidth="44.0" onMouseClicked="#pausarPartida" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/icono_pausa.png" />
+                     </image>
+                  </ImageView>
                   <ImageView fx:id="usuario" fitHeight="35.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../imagenes/usuario.png" />
@@ -88,7 +84,7 @@
             <Insets bottom="5.0" />
          </VBox.margin>
       </ToolBar>
-      <StackPane fx:id="stackPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="565.0" prefWidth="894.0" style="-fx-background-color: ffffff;">
+      <StackPane fx:id="stackPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="565.0" prefWidth="894.0" style="-fx-background-color: ffffff;" styleClass="bodybg" stylesheets="@../application/estilo1.css">
          <children>
             <GridPane prefHeight="572.0" prefWidth="894.0">
               <columnConstraints>
