--- a/Emparejados/src/Vista/partida.fxml
+++ b/Emparejados/src/Vista/partida.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="894.0" style="-fx-background-color: ffffff;" styleClass="bodybg" stylesheets="@../application/estilo1.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="894.0" style="-fx-background-color: ffffff;" styleClass="bodybg" stylesheets="@../application/estilo1.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorPartida">
    <children>
       <ToolBar maxHeight="-Infinity" prefHeight="48.0" prefWidth="894.0">
         <items>
@@ -190,6 +190,11 @@
                   <Image url="@../imagenes/resultado_victoria.png" />
                </image>
             </ImageView>
+            <Label fx:id="puntosAnyadidos" alignment="CENTER" prefHeight="127.0" prefWidth="176.0" text="+5" textFill="#fb0000">
+               <font>
+                  <Font size="81.0" />
+               </font>
+            </Label>
          </children>
       </StackPane>
    </children>
