--- a/Emparejados/src/application/estilo2.css
+++ b/Emparejados/src/application/estilo2.css
@@ -1,4 +1,9 @@
 
-.bodybg{
-    -fx-background-image: url("/imagenes/marco.png");
+.fondoTablero{
+    -fx-background-image: url("/imagenes/tablero.png");
+}
+
+.label{
+	-fx-font-weight: bold;
+	-fx-font-size: 30;
 }
