--- a/Emparejados/src/Vista/MenuPause.fxml
+++ b/Emparejados/src/Vista/MenuPause.fxml
@@ -4,19 +4,19 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="575.0" prefWidth="895.0" style="-fx-background-color: ffffff;" styleClass="bodybg" stylesheets="@../application/estilo2.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPause">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="627.0" prefWidth="895.0" styleClass="fondoMenuPausa" stylesheets="@../application/estilo1.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPause">
    <children>
-      <ImageView fx:id="imagePlay" fitHeight="127.0" fitWidth="127.0" layoutX="374.0" layoutY="261.0" onMouseClicked="#clickPlay" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imagePlay" fitHeight="152.0" fitWidth="159.0" layoutX="372.0" layoutY="253.0" onMouseClicked="#clickPlay" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/reanudar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imageHome" fitHeight="100.0" fitWidth="115.0" layoutX="231.0" layoutY="274.0" onMouseClicked="#clickHome" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageHome" fitHeight="121.0" fitWidth="127.0" layoutX="180.0" layoutY="269.0" onMouseClicked="#clickHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/home.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imageSound" fitHeight="107.0" fitWidth="114.0" layoutX="536.0" layoutY="271.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageSound" fitHeight="133.0" fitWidth="137.0" layoutX="575.0" layoutY="271.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/sonido_on.png" />
          </image>
@@ -26,9 +26,9 @@
             <Image url="@../imagenes/texto_pausa.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="23.0" fitWidth="289.0" layoutX="618.0" layoutY="497.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="31.0" fitWidth="221.0" layoutX="601.0" layoutY="539.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../imagenes/by_twinsoft2.png" />
+            <Image url="@../imagenes/by_twinsoft.png" />
          </image></ImageView>
    </children>
 </Pane>
