--- a/Emparejados/src/Vista/ConfirmacionSalirApp.fxml
+++ b/Emparejados/src/Vista/ConfirmacionSalirApp.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="590.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorConfirmacionSalirApp">
    <children>
-      <Label layoutX="14.0" layoutY="26.0" prefHeight="31.0" prefWidth="488.0" stylesheets="@../application/estilo1.css" text="¿Está seguro de que quiere salir de la aplicación?" />
+      <Label layoutX="14.0" layoutY="26.0" prefHeight="31.0" prefWidth="488.0" styleClass="label2" stylesheets="@../application/estilo1.css" text="¿Está seguro de que quiere salir de la aplicación?" />
       <Button fx:id="aceptar" layoutX="208.0" layoutY="119.0" mnemonicParsing="false" onAction="#aceptarHandler" prefHeight="48.0" prefWidth="175.0" stylesheets="@../application/estilo1.css" text="Aceptar" />
       <Button fx:id="cancelar" layoutX="401.0" layoutY="119.0" mnemonicParsing="false" onAction="#cancelarHandler" prefHeight="48.0" prefWidth="175.0" stylesheets="@../application/estilo1.css" text="Cancelar" />
       <ImageView fitHeight="54.0" fitWidth="61.0" layoutX="502.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
