--- a/Emparejados/src/application/estilo1.css
+++ b/Emparejados/src/application/estilo1.css
@@ -1,21 +1,4 @@
 
-.fondoTablero{
-    -fx-background-image: url("/imagenes/tablero.png");
-}
-
-.fondoMenuPausa{
-	-fx-background-color: white;
-    -fx-border-color: #4b6aff;
-	-fx-border-width: 30;
-}
-
-.fondoBoton{
-	-fx-background-color: white;
-    -fx-border-color: #4b6aff;
-	-fx-border-width: 7;
-	-fx-border-radius: 40;
-}
-
 .button{
 	-fx-font-weight: bold;
 	-fx-background-color: white;
@@ -57,6 +40,37 @@
 	-fx-font-weight: bold;
 	-fx-background-color: white;
 	-fx-background-radius: 30;
+	-fx-font-size: 32;
+	-fx-text-fill: #4b6aff;
+}
+
+.label2{
+	-fx-font-weight: bold;
+	-fx-background-color: white;
+	-fx-background-radius: 30;
 	-fx-font-size: 20;
 	-fx-text-fill: #4b6aff;
+}
+
+.fondoTablero{
+    -fx-background-image: url("/imagenes/tablero.png");
+}
+
+.fondoMenuPausa{
+	-fx-background-color: white;
+    -fx-border-color: #4b6aff;
+	-fx-border-width: 30;
+}
+
+.fondoPartidaCarta {
+	-fx-background-color: white;
+    -fx-border-color: #4b6aff;
+	-fx-border-width: 10;
+}
+
+.fondoBoton{
+	-fx-background-color: white;
+    -fx-border-color: #4b6aff;
+	-fx-border-width: 7;
+	-fx-border-radius: 40;
 }
